--- a/package.json
+++ b/package.json
@@ -38,30 +38,32 @@
   },
   "homepage": "https://github.com/Tueloper/Email-ly#readme",
   "dependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
     "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/register": "^7.8.3",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "chalk": "^3.0.0",
     "cors": "^2.8.5",
+    "coveralls": "^3.0.9",
     "cross-env": "^7.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mocha": "^7.0.1",
     "morgan": "^1.9.1",
+    "nodemon": "^2.0.2",
+    "nyc": "^15.0.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^7.18.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
-    "uuid": "^3.4.0",
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/node": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/register": "^7.8.3",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "coveralls": "^3.0.9",
-    "mocha": "^7.0.1",
-    "nodemon": "^2.0.2",
-    "nyc": "^15.0.0"
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
