Oauth is running

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "chalk": "^3.0.0",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "coveralls": "^3.0.9",
     "cross-env": "^7.0.0",
