--- a/package.json
+++ b/package.json
@@ -81,7 +81,10 @@
     "eslint-config-node": "^4.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-node": "^11.0.0"
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-config-esnext": "^4.0.0"
   },
   "nyc": {
     "exclude": [
