--- a/package.json
+++ b/package.json
@@ -78,13 +78,11 @@
     "@babel/register": "^7.8.3",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-esnext": "^4.0.0",
     "eslint-config-node": "^4.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "eslint-config-esnext": "^4.0.0"
+    "eslint-plugin-node": "^11.0.0"
   },
   "nyc": {
     "exclude": [
