--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "nodemon src/index.js --exec babel-node",
     "build": "babel src --out-dir dist",
-    "start": "node dist/index.js",
+    "start": "node ./dist/index.js",
     "test": "nyc mocha --no-timeout './tests' --exit",
     "test:report": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text-summary mocha --timeout 5000 './tests' --exit",
     "coverage": "cross-env NODE_ENV=test nyc npm run test && nyc report --reporter=lcov --reporter=text-lcov --exit",
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Tueloper/Email-ly.git"
+    "url": "git+https://github.com/Tueloper/Emaily.git"
   },
   "keywords": [
     "Email-ly",
@@ -36,9 +36,9 @@
   "author": "Tochukwu Ozurumba",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Tueloper/Email-ly/issues"
+    "url": "https://github.com/Tueloper/Emaily/issues"
   },
-  "homepage": "https://github.com/Tueloper/Email-ly#readme",
+  "homepage": "https://github.com/Tueloper/Emaily#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
