--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "@babel/node": "^7.8.4",
     "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
-    "@babel/register": "^7.8.3"
+    "@babel/register": "^7.8.3",
+    "materialize-css": "^1.0.0"
   }
 }
