--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,8 @@
     "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/register": "^7.8.3",
-    "materialize-css": "^1.0.0"
+    "axios": "^0.19.2",
+    "materialize-css": "^1.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
