--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "@babel/register": "^7.8.3",
     "axios": "^0.19.2",
     "materialize-css": "^1.0.0",
+    "react-stripe-checkout": "^2.6.3",
     "redux-thunk": "^2.3.0"
   }
 }
