--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "eslint-config-node": "^4.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-node": "^11.0.0"
+    "eslint-plugin-node": "^11.0.0",
+    "stripe": "^8.22.0"
   },
   "nyc": {
     "exclude": [
