--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "axios": "^0.19.2",
     "materialize-css": "^1.0.0",
     "react-stripe-checkout": "^2.6.3",
+    "redux-form": "^8.3.0",
     "redux-thunk": "^2.3.0"
   }
 }
