--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/register": "^7.8.3",
     "axios": "^0.19.2",
+    "lodash": "^4.17.15",
     "materialize-css": "^1.0.0",
     "react-stripe-checkout": "^2.6.3",
     "redux-form": "^8.3.0",
