--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "^11.0.0",
+    "localtunnel": "^2.0.0",
     "sendgrid": "^5.2.3",
     "stripe": "^8.22.0"
   },
